--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,9 @@ h1 {
 
 .section-one {
   background-color: #2e2f42;
+  background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/bg.jpg");
+  background-size: cover;
 }
 
 .section-zero {
